--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -19,11 +19,12 @@
 }
 
 .legend i {
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
     float: left;
     margin-right: 8px;
     opacity: 0.7;
+    margin-top: 0.4px;
 }
 
 .leaflet-popup-content-wrapper, .leaflet-popup-tip {
