--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -1,36 +1,52 @@
 .info {
-    padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
 
 .info h4 {
-    margin: 0 0 5px;
-    color: #777;
+  margin: 0 0 5px;
+  color: #777;
 }
 
 .legend {
-    text-align: left;
-    line-height: 18px;
-    color: #555;
+  text-align: left;
+  line-height: 18px;
+  color: #555;
 }
 
 .legend i {
-    width: 16px;
-    height: 16px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.7;
-    margin-top: 0.4px;
+  width: 16px;
+  height: 16px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+  margin-top: 0.4px;
 }
 
-.leaflet-popup-content-wrapper, .leaflet-popup-tip {
-    background:rgba(0, 147, 102, 0.9);
-    color: rgba(255, 255, 255, 1);
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+  background: rgba(0, 147, 102, 0.9);
+  color: rgba(255, 255, 255, 1);
 }
 .leaflet-popup-content-wrapper {
-    text-align: center;
+  text-align: center;
+}
+#map .search-input {
+  width: 120px;
+}
+#map .leaflet-control-search .search-input {
+  margin-bottom: 0;
+}
+#map .leaflet-control-search.search-exp {
+  border-width: 1px;
+}
+
+#map .leaflet-control-search.leaflet-control {
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 2px solid transparent;
+  border-radius: 4px;
 }
