--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -1,22 +1,22 @@
 .info {
-  padding: 6px 8px;
-  font: 14px/16px Arial, Helvetica, sans-serif;
-  background: white;
-  background: rgba(255, 255, 255, 0.8);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  font-size: xx-small;
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    font-size: xx-small;
 }
 .info h4 {
-  margin: 0 0 5px;
-  color: #777;
-  text-align: center;
+    margin: 0 0 5px;
+    color: #777;
+    text-align: center;
 }
 
 .legend {
-  text-align: left;
-  line-height: 12px;
-  color: #555;
+    text-align: left;
+    line-height: 12px;
+    color: #555;
 }
 
 /* .legend i {
@@ -28,37 +28,43 @@
     margin-top: 0.4px;
 } */
 .legend i {
-  width: 8px;
-  height: 8px;
-  float: left;
-  margin-right: 5px;
-  opacity: 0.7;
-  margin-top: 1.4px;
+    width: 8px;
+    height: 8px;
+    float: left;
+    margin-right: 5px;
+    opacity: 0.7;
+    margin-top: 1.4px;
 }
 .leaflet-popup-content p {
-  line-height: 9px;
+    line-height: 9px;
 }
-.leaflet-popup-content-wrapper,
-.leaflet-popup-tip {
-  background: rgba(0, 147, 102, 0.9);
-  color: rgba(255, 255, 255, 1);
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+    background:rgba(0, 147, 102, 0.9);
+    color: rgba(255, 255, 255, 1);
 }
 .leaflet-popup-content-wrapper {
-  text-align: center;
+    text-align: center;
+}
+
+.leaflet-control-search .search-input {
+    width: 175px;
 }
 
 #map .search-input {
-  width: 75vw !important;
-  max-width: unset !important;
-}
-#map .leaflet-control-search .search-input {
-  margin-bottom: 0;
-}
-#map .leaflet-control-search.search-exp {
-  border-width: 1px;
-}
-#map .leaflet-control-search.leaflet-control {
-  border: 2px solid rgba(0, 0, 0, 0.2);
-  border-bottom: 2px solid transparent;
-  border-radius: 4px;
-}
+    width: 43vh;
+  }
+  #map .leaflet-control-search .search-input {
+    margin-bottom: 0;
+  }
+  #map .leaflet-control-search.search-exp {
+    border-width: 1px;
+  }
+  
+  #map .leaflet-control-search.leaflet-control {
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 2px solid transparent;
+    border-radius: 4px;
+  }
+  .leaflet-bottom.leaflet-right{
+      bottom:4px;
+  }
