--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -46,13 +46,9 @@
     text-align: center;
 }
 
-.leaflet-control-search .search-input {
+#map .search-input {
     width: 43vh;
-}
-
-/* #map .search-input {
-    width: 43vh;
-  } */
+  }
   #map .leaflet-control-search .search-input {
     margin-bottom: 0;
   }
