--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -52,6 +52,7 @@
 }
 #map .leaflet-control-search .search-input {
   margin-bottom: 0;
+  border: 0;
 }
 #map .leaflet-control-search.search-exp {
   border-width: 1px;
