--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -35,6 +35,18 @@
     opacity: 0.7;
     margin-top: 1.4px;
 }
+
+.legend .yqIcon {
+  font-size: 6px;
+  font-family: sans-serif;
+  margin-top: 7px;
+}
+.legend img {
+  width:12px;
+  height:12px;
+  margin-left:-2px;
+  margin-bottom:-3px;
+}
 .leaflet-popup-content p {
     line-height: 9px;
 }
