--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -36,7 +36,7 @@
     margin-top: 1.4px;
 }
 
-.legend .yqIcon {
+.legend .markerIcon {
   font-size: 8px;
   font-family: sans-serif;
   margin-top: 7px;
