--- a/src/components/Map/leaflet-style.css
+++ b/src/components/Map/leaflet-style.css
@@ -85,3 +85,12 @@
 .am-modal-mask{
   z-index: 1000;
 }
+
+#detailBtn {
+  color:#fff;
+  cursor:pointer;
+  background: transparent;
+  border-right:0px;
+  border-bottom: 1px solid #fff;
+  border-left:0px;border-top:0px;
+}
